Added dashboard and customers components

--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -44,7 +44,7 @@
     </mat-sidenav>
     <mat-sidenav-content>
         <div class="content mat-elevation-z8">
-            Main Content
+            <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
