--- a/src/app/shared/main-layout/main-layout.component.scss
+++ b/src/app/shared/main-layout/main-layout.component.scss
@@ -15,10 +15,10 @@ mat-sidenav {
 }
 
 .content {
-    height: calc(100vh - 98px);
+    height: auto;
     margin: 16px;
     margin-left: 32px;
-    display: flex;
+    padding: 16px;
     justify-content: center;
     align-items: center;
 
