Replaced Material Table with PrimeNg table

--- a/src/app/shared/main-layout/main-layout.component.html
+++ b/src/app/shared/main-layout/main-layout.component.html
@@ -43,7 +43,7 @@
 
     </mat-sidenav>
     <mat-sidenav-content>
-        <div class="content mat-elevation-z8">
+        <div class="card mat-elevation-z4" style="border-radius: 10px; margin: 2rem; padding: 1rem;">
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
