--- a/src/app/components/customers/customers-list/customers-list.component.html
+++ b/src/app/components/customers/customers-list/customers-list.component.html
@@ -1,49 +1,72 @@
-<mat-toolbar class="mat-elevation-z2" style="margin-bottom: 10px;">
-    <button (click)="addNewCustomer()" color="primary" mat-fab extended>
-        <mat-icon color="white">add</mat-icon>Add Customer
-    </button>
-</mat-toolbar>
+<p-toolbar styleClass="mb-4 gap-2">
+    <ng-template pTemplate="left">
+        <button (click)="addNewCustomer()" color="primary" mat-fab extended>
+            <mat-icon color="white">add</mat-icon>Add Customer
+        </button>
+    </ng-template>
+</p-toolbar>
 
-<div class="table-container">
-    <table mat-table [dataSource]="customerData" class="mat-elevation-z8">
-        <ng-container matColumnDef="customerNumber">
-            <th mat-header-cell *matHeaderCellDef> Customer Number </th>
-            <td mat-cell *matCellDef="let customer"> {{customer.customerNumber}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Customer Name </th>
-            <td mat-cell *matCellDef="let customer"> {{customer.firstName}} {{customer.lastName}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="address">
-            <th mat-header-cell *matHeaderCellDef> Address </th>
-            <td mat-cell *matCellDef="let customer"> {{customer.address}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="phoneNumber">
-            <th mat-header-cell *matHeaderCellDef> Phone Number </th>
-            <td mat-cell *matCellDef="let customer"> {{customer.phoneNumber}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="email">
-            <th mat-header-cell *matHeaderCellDef> Email </th>
-            <td mat-cell *matCellDef="let customer"> {{customer.email}} </td>
-        </ng-container>
-    
-        <ng-container matColumnDef="action">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
-            <td mat-cell *matCellDef="let row">
-                <span class="action-icon" style="margin-right: 5px;">
-                    <mat-icon color="primary">edit</mat-icon>
-                </span>
-                <span class="action-icon">
-                    <mat-icon color="warn">delete</mat-icon>
-                </span>
-            </td>
-        </ng-container>
-    
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-</div>
+<p-table
+    #dt
+    [value]="customerData"
+    [rows]="10"
+    [paginator]="true"
+    [globalFilterFields]="['customerNumber', 'firstName', 'lastName', 'address', 'phoneNumber', 'email']"
+    [tableStyle]="{ 'min-width': '75rem' }"
+    [rowHover]="true"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [showCurrentPageReport]="true"
+>
+    <ng-template pTemplate="caption">
+        <div class="flex align-items-center justify-content-between">
+            <h1 class="m-0">List of Customers</h1>
+            <p-iconField iconPosition="left" class="ml-auto">
+                <p-inputIcon>
+                    <i class="pi pi-search"></i>
+                </p-inputIcon>
+                <input 
+                    pInputText 
+                    type="text" 
+                    (input)="onGlobalFilter(dt, $event)"
+                    placeholder="Search keyword" />
+            </p-iconField>
+        </div>
+    </ng-template>
+
+<ng-template pTemplate="header">
+    <tr>
+        <th>Customer Number</th>
+        <th>Customer Name</th>
+        <th>Address</th>
+        <th>Phone Number</th>
+        <th>Email</th>
+        <th>Action</th>
+    </tr>
+</ng-template>
+<ng-template pTemplate="body" let-customer>
+    <tr>
+        <td>{{ customer.customerNumber }}</td>
+        <td>{{ customer.firstName }} {{customer.lastName}}</td>
+        <td>{{ customer.address }}</td>
+        <td>{{ customer.phoneNumber }}</td>
+        <td>{{ customer.email }}</td>
+        <td>
+            <p-button [rounded]="true" [text]="true" size="small">
+                <mat-icon color="primary">edit</mat-icon>
+            </p-button>
+            <p-button [rounded]="true" [text]="true" size="small" severity="danger">
+                <mat-icon color="warn">delete</mat-icon>
+            </p-button>
+        </td>
+    </tr>
+</ng-template>
+
+<ng-template pTemplate="summary">
+    <div class="flex align-items-center justify-content-between">
+        In total, there are {{ customerData ? customerData.length : 0 }} customers.
+    </div>
+</ng-template>
+
+</p-table>
+
+
