Added delete customer service

--- a/src/app/components/customers/customer-edit/customer-edit.component.html
+++ b/src/app/components/customers/customer-edit/customer-edit.component.html
@@ -1,6 +1,6 @@
 <div class="grid nested-grid">
     <p-toast key="successKey" position="top-center" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }" />
-    <p-toast key="errorKey" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }" />
+    <p-toast key="errorKey" position="top-center" [breakpoints]="{ '920px': { width: '100%', right: '0', left: '0' } }" />
     <div class="col-12 md:col-2">
         <h2 style="font-weight: 800;">Customer Information</h2>
         <h4 style="font-weight: 800; color: grey;">{{customerNumber}}</h4>
